--- a/lang/en.json
+++ b/lang/en.json
@@ -73,7 +73,8 @@
     "WFRP4eEndeavours.BA.Entertaining": "Entertaining (Requires Venue)",
     "WFRP4eEndeavours.BA.Border": "Patrolling the Border (Requires Fortification)",
     "WFRP4eEndeavours.BA.Rationing": "Rationing (Requires Farmstead)",
-    "WFRP4eEndeavours.BA.Expedition": "Sponsoring an Expedition (Requires Capitol)",    "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
+    "WFRP4eEndeavours.BA.Expedition": "Sponsoring an Expedition (Requires Capitol)",
+    "WFRP4eEndeavours.BA.Skaven": "A Study in Skaven",
     "WFRP4eEndeavours.BA.Best": "Only the Best",
     "WFRP4eEndeavours.BA.Hypotesis": "The Null Hypotesis",
     "WFRP4eEndeavours.BA.Hedge": "Hedge School",
