--- a/lang/en.json
+++ b/lang/en.json
@@ -93,49 +93,49 @@
     "WFRP4eEndeavours.Travel.ForageforFood": "Forage for Food",
     "WFRP4eEndeavours.Travel.Boat": "Repair a Boat",
     
-    "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Animal Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9mIhYiuhgKVuWiAF]{Animal Training (Demigryph)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.MOq6Dd5wvXqpRLCW]{Animal Training (Dog)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.n7sByqBJtLN2E2Of]{Animal Training (Horse)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5aAOdvSVsKFiDLZj]{Animal Training (Pegasus)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8DoSS6o6tKczwBOD]{Animal Training (Pigeon)}",
+    "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Animal Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9mIhYiuhgKVuWiAF]{Animal Training (Demigryph)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.MOq6Dd5wvXqpRLCW]{Animal Training (Dog)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.n7sByqBJtLN2E2Of]{Animal Training (Horse)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5aAOdvSVsKFiDLZj]{Animal Training (Pegasus)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8DoSS6o6tKczwBOD]{Animal Training (Pigeon)}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Banking}.",
     "WFRP4eEndeavours.Link.Career": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.oj2iiLVfNWp7KIhk]{Changing Career}.",
     "WFRP4eEndeavours.Link.Commission": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Z1GbXJsphhaTINRA]{Commission}.",
-    "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consult an Expert}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5sNZ0wUFt5e2kl8g]{Find an Expert}",
+    "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consult an Expert}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5sNZ0wUFt5e2kl8g]{Find an Expert}",
     "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Crafting}.",
     "WFRP4eEndeavours.Link.Income": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.JX9ifRlgzzGrU2zh]{Income}.",
     "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{Invent!}.",
     "WFRP4eEndeavours.Link.Training": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0T8zisBH3D082Ztw]{Training}.",
     "WFRP4eEndeavours.Link.Learning": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.bWcKCn1S1ufDG9bJ]{Unusual Learning}.",
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Combat Training}.",
-    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Foment Dissent}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.z6mDmQzkTgmWAn7W]{Foment Dissent (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.WNTHJ26Ri47PNbpy]{Foment Dissent (Charm)}",
-    "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{The Latest News}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1BH6KfEaP7bFsbTn]{The Latest News}",
+    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Foment Dissent}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.z6mDmQzkTgmWAn7W]{Foment Dissent (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.WNTHJ26Ri47PNbpy]{Foment Dissent (Charm)}",
+    "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{The Latest News}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1BH6KfEaP7bFsbTn]{The Latest News}",
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.",
-    "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.w6bgiYK0m0tE9ra3]{Study a Mark}",
-    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Woodcraft}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.v17mX07IRnYJa8ju]{Woodcraft}",
-    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yaScut9F9BczNQ82]{Forage}",
-    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Gather Information}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6oflBLaejV68Ds4Y]{Gather Information}",
-    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Keep Watch}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Map the Route}.",
-    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practice a Skill}.",
-    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperate}.",
-    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Make Camp}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Bl4HfC9PHexKcAxK]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.0uAdenlQr0lK438e]{Make Camp (Heal)}",
-    "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6w5TWRe30xs1PwmX]{College Research}",
-    "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Tc4mUAG2DtdfdRaI]{Patronage}",
-    "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penance}",
+    "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
+    "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
+    "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
+    "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
+    "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
+    "WFRP4eEndeavours.Link.Map": "Map the Route.",
+    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
+    "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
+    "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Bl4HfC9PHexKcAxK]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp (Heal)}",
+    "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
+    "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
+    "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Train with Unusual Weapon.",
-    "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
-    "WFRP4eEndeavours.Link.Alcatini": "Alcatini Method.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.83QgU78rUIFABQsF]{Alcatini Method}",
-    "WFRP4eEndeavours.Link.Punchausen": "Count Punchausen's Narrative Auction.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction (Charm)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.pS2Key5geZSz6Wn0]{Count Punchausen's Narrative Auction (Entertain)}",
-    "WFRP4eEndeavours.Link.Fanmaris": "Fanmaris's Perfect Shot.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
+    "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
+    "WFRP4eEndeavours.Link.Alcatini": "Alcatini Method.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{Alcatini Method}",
+    "WFRP4eEndeavours.Link.Punchausen": "Count Punchausen's Narrative Auction.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction (Charm)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.pS2Key5geZSz6Wn0]{Count Punchausen's Narrative Auction (Entertain)}",
+    "WFRP4eEndeavours.Link.Fanmaris": "Fanmaris's Perfect Shot.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
     "WFRP4eEndeavours.Link.Leitdorf": "The Leitdorf Defence.",
-    "WFRP4eEndeavours.Link.Quartermaster": "The Quartermaster Shuffle.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RFeMoXNQ6qpYPwgG]{Find a Job}",
+    "WFRP4eEndeavours.Link.Quartermaster": "The Quartermaster Shuffle.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Find a Job}",
     "WFRP4eEndeavours.Link.Brew": "Brew Potion.",
     "WFRP4eEndeavours.Link.Ingredients": "Gather Ingredients.",
-    "WFRP4eEndeavours.Link.Familiar": "Improve Familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.m8x4xAhvCFrBYcmB]{Improve Familiar}",
+    "WFRP4eEndeavours.Link.Familiar": "Improve Familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Improve Familiar}",
     "WFRP4eEndeavours.Link.Ritual": "Perform Ritual.",
-    "WFRP4eEndeavours.Link.Mapmaking": "Mapmaking.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kkZVd242H3PYmgiq]{Mapmaking}",
-    "WFRP4eEndeavours.Link.Trade": "Opportune Trade.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Opportune Trade}",
-    "WFRP4eEndeavours.Link.Ship": "Ship Maintenance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Ship Maintenance (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Ship Maintenance (Carpenter)}",
-    "WFRP4eEndeavours.Link.Crew": "Train Crew.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Train Crew}",
-    "WFRP4eEndeavours.Link.Deforestation": "Deforestation.</b></h3><p>Maybe @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.gNUdm6x4ko6L4BJg]{Double Shifts} and/or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Z3IVWcZ3BesTlXWV]{Leading Woodcutters}",
+    "WFRP4eEndeavours.Link.Mapmaking": "Mapmaking.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Mapmaking}",
+    "WFRP4eEndeavours.Link.Trade": "Opportune Trade.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Opportune Trade}",
+    "WFRP4eEndeavours.Link.Ship": "Ship Maintenance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Ship Maintenance (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6PIkSbxFLwCM9tkA]{Ship Maintenance (Carpenter)}",
+    "WFRP4eEndeavours.Link.Crew": "Train Crew.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Train Crew}",
+    "WFRP4eEndeavours.Link.Deforestation": "Deforestation.</b></h3><p>Maybe @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.gNUdm6x4ko6L4BJg]{Double Shifts} and/or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Z3IVWcZ3BesTlXWV]{Leading Woodcutters}",
     "WFRP4eEndeavours.Link.Ancients": "Attuning With the Ancients.",
     "WFRP4eEndeavours.Link.Boatbuilding": "Boatbuilding.",
     "WFRP4eEndeavours.Link.Construction": "Construction.",
@@ -143,19 +143,19 @@
     "WFRP4eEndeavours.Link.Border": "Patrolling the Border.",
     "WFRP4eEndeavours.Link.Rationing": "Rationing.",
     "WFRP4eEndeavours.Link.Expedition": "Sponsoring an Expedition.",
-    "WFRP4eEndeavours.Link.Shelter": "Find Shelter.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.bIXQJZBEaL5iziDm]{Find Shelter}",
-    "WFRP4eEndeavours.Link.ForageforFood": "Forage for Food.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.uwUjherl2lz7eQzJ]{Forage for Food}",
-    "WFRP4eEndeavours.Link.WatchLustria": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.vVyunkd81fwidcia]{Keep Watch}",
+    "WFRP4eEndeavours.Link.Shelter": "Find Shelter.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.bIXQJZBEaL5iziDm]{Find Shelter}",
+    "WFRP4eEndeavours.Link.ForageforFood": "Forage for Food.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.uwUjherl2lz7eQzJ]{Forage for Food}",
+    "WFRP4eEndeavours.Link.WatchLustria": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vVyunkd81fwidcia]{Keep Watch}",
     "WFRP4eEndeavours.Link.MapLustria": "Map the Route.",
     "WFRP4eEndeavours.Link.PracticeLustria": "Practice a Skill.",
-    "WFRP4eEndeavours.Link.CampLustria": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yIa61a3wdrpyYJVg]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8m5LbpBAEO6PFrzD]{Make Camp (Heal)}",
-    "WFRP4eEndeavours.Link.Boat": "Repair a Boat.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kgbyWNs5nzPmSKZn]{Repair a Boat (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1vLRKb4gC2CgWxaO]{Repair a Boat (Carpenter)}",
+    "WFRP4eEndeavours.Link.CampLustria": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yIa61a3wdrpyYJVg]{Make Camp (Rest)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8m5LbpBAEO6PFrzD]{Make Camp (Heal)}",
+    "WFRP4eEndeavours.Link.Boat": "Repair a Boat.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kgbyWNs5nzPmSKZn]{Repair a Boat (Boatbuilder)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1vLRKb4gC2CgWxaO]{Repair a Boat (Carpenter)}",
     "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.",
     "WFRP4eEndeavours.Link.Best": "Only the Best.",
-    "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resist Null}",
+    "WFRP4eEndeavours.Link.Hypotesis": "The Null Hypotesis.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HrkhcT4xbydE8X8c]{Resist Null}",
     "WFRP4eEndeavours.Link.Hedge": "Hedge School.",
-    "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.VrMf6VMV5pBSMsil]{Foment Dissent with Rosendorn (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Q3jQInFQLCR4XSl0]{Foment Dissent with Rosendorn (Charm)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy}",
-    "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9bLQ0KZgRwX0uZfN]{Bear Witness (Sigmar)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.wBGNR575OgLiOKad]{Bear Witness (Theology)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.dJZMhU1DKTmdvy8S]{Bear Witness (Intelligence)}",
+    "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.VrMf6VMV5pBSMsil]{Foment Dissent with Rosendorn (Gossip)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Q3jQInFQLCR4XSl0]{Foment Dissent with Rosendorn (Charm)} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy}",
+    "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9bLQ0KZgRwX0uZfN]{Bear Witness (Sigmar)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.wBGNR575OgLiOKad]{Bear Witness (Theology)} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness (Intelligence)}",
     
     "WFRP4eEndeavours.Title.Animal": " - Animal Training",
     "WFRP4eEndeavours.Title.Expert": " - Find an Expert",
