--- a/lang/es.json
+++ b/lang/es.json
@@ -93,49 +93,49 @@
     "WFRP4eEndeavours.Travel.ForageforFood": "Forrajear comida",
     "WFRP4eEndeavours.Travel.Boat": "Reparar un barco",
     
-    "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Adiestrar animal}.</b></h3>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.n7sByqBJtLN2E2Of]{Adiestrar animal (Caballo)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8DoSS6o6tKczwBOD]{Adiestrar animal (Paloma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5aAOdvSVsKFiDLZj]{Adiestrar animal (Pegaso)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.MOq6Dd5wvXqpRLCW]{Adiestrar animal (Perro)} o <p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9mIhYiuhgKVuWiAF]{Adiestrar animal (Semigrifo)}",
+    "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Adiestrar animal}.</b></h3>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.n7sByqBJtLN2E2Of]{Adiestrar animal (Caballo)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8DoSS6o6tKczwBOD]{Adiestrar animal (Paloma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5aAOdvSVsKFiDLZj]{Adiestrar animal (Pegaso)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.MOq6Dd5wvXqpRLCW]{Adiestrar animal (Perro)} o <p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9mIhYiuhgKVuWiAF]{Adiestrar animal (Semigrifo)}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Actividades bancarias}.",
     "WFRP4eEndeavours.Link.Career": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.oj2iiLVfNWp7KIhk]{Cambiar de carrera}.",
     "WFRP4eEndeavours.Link.Commission": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Z1GbXJsphhaTINRA]{Encargo}.",
-    "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consultar con un experto}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5sNZ0wUFt5e2kl8g]{Encontrar un experto}",
+    "WFRP4eEndeavours.Link.Expert": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0EF53KOVgme173EO]{Consultar con un experto}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5sNZ0wUFt5e2kl8g]{Encontrar un experto}",
     "WFRP4eEndeavours.Link.Crafting": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RQLJYU3OyA0WUoPG]{Artesan\u00EDa}.",
     "WFRP4eEndeavours.Link.Income": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.JX9ifRlgzzGrU2zh]{Salario}.",
     "WFRP4eEndeavours.Link.Invent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WlZBXUi7qdCCeNl1]{\u00A1Inventar!}.",
     "WFRP4eEndeavours.Link.Training": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.0T8zisBH3D082Ztw]{Entrenar}.",
     "WFRP4eEndeavours.Link.Learning": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.bWcKCn1S1ufDG9bJ]{Aprendizaje inusual}.",
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Entrenamiento en combate}.",
-    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Fomentar la discordia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.z6mDmQzkTgmWAn7W]{Fomentar la discordia (Cotilleo)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.WNTHJ26Ri47PNbpy]{Fomentar la discordia (Carisma)}",
-    "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{\u00DAltimas noticias}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1BH6KfEaP7bFsbTn]{\u00DAltimas noticias}",
+    "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Fomentar la discordia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.z6mDmQzkTgmWAn7W]{Fomentar la discordia (Cotilleo)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.WNTHJ26Ri47PNbpy]{Fomentar la discordia (Carisma)}",
+    "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{\u00DAltimas noticias}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1BH6KfEaP7bFsbTn]{\u00DAltimas noticias}",
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputaci\u00F3n}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Investigar un saber}.",
-    "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Estudiar a una v\u00EDctima}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.w6bgiYK0m0tE9ra3]{Estudiar a una v\u00EDctima}",
-    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Conocimiento del bosque}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.v17mX07IRnYJa8ju]{Conocimiento del bosque}",
-    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forrajear}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yaScut9F9BczNQ82]{Forrajear}",
-    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Recopilar informaci\u00F3n}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
-    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Montar guardia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yQKnn7GB8tZvyisf]{Montar guardia}",
-    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Trazar la ruta}.",
-    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practicar una habilidad}.",
-    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperar}.",
-    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Acampar}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Bl4HfC9PHexKcAxK]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.0uAdenlQr0lK438e]{Acampar (Sanar)}",
-    "WFRP4eEndeavours.Link.College": "Investigaci\u00F3n en Colegio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
-    "WFRP4eEndeavours.Link.Patronage": "Patrocinio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Tc4mUAG2DtdfdRaI]{Patrocinio}",
-    "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.LtZXd1AtW9bP0qwq]{Penitencia}",
+    "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Estudiar a una v\u00EDctima}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Estudiar a una v\u00EDctima}",
+    "WFRP4eEndeavours.Link.Woodcraft": "Conocimiento del bosque.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Conocimiento del bosque}",
+    "WFRP4eEndeavours.Link.Forage": "Forrajear.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
+    "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
+    "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
+    "WFRP4eEndeavours.Link.Map": "Trazar la ruta.",
+    "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
+    "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
+    "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Bl4HfC9PHexKcAxK]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar (Sanar)}",
+    "WFRP4eEndeavours.Link.College": "Investigaci\u00F3n en Colegio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
+    "WFRP4eEndeavours.Link.Patronage": "Patrocinio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patrocinio}",
+    "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.",
-    "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
-    "WFRP4eEndeavours.Link.Alcatini": "M\u00E9todo Alcatini.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
-    "WFRP4eEndeavours.Link.Punchausen": "Subasta narrativa del Conde Punchausen.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen (Carisma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.pS2Key5geZSz6Wn0]{Subasta narrativa del Conde Punchausen (Animar)}",
-    "WFRP4eEndeavours.Link.Fanmaris": "El disparo perfecto de Fanmaris.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
+    "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
+    "WFRP4eEndeavours.Link.Alcatini": "M\u00E9todo Alcatini.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
+    "WFRP4eEndeavours.Link.Punchausen": "Subasta narrativa del Conde Punchausen.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen (Carisma)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.pS2Key5geZSz6Wn0]{Subasta narrativa del Conde Punchausen (Animar)}",
+    "WFRP4eEndeavours.Link.Fanmaris": "El disparo perfecto de Fanmaris.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
     "WFRP4eEndeavours.Link.Leitdorf": "La defensa Leitdorf.",
-    "WFRP4eEndeavours.Link.Quartermaster": "Lo que el intendente traspapel\u00F3.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RFeMoXNQ6qpYPwgG]{Encontrar un trabajo}",
+    "WFRP4eEndeavours.Link.Quartermaster": "Lo que el intendente traspapel\u00F3.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Encontrar un trabajo}",
     "WFRP4eEndeavours.Link.Brew": "Preparar poci\u00F3n.",
     "WFRP4eEndeavours.Link.Ingredients": "Reunir ingredientes.",
-    "WFRP4eEndeavours.Link.Familiar": "Mejorar familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.m8x4xAhvCFrBYcmB]{Mejorar familiar}",
+    "WFRP4eEndeavours.Link.Familiar": "Mejorar familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Mejorar familiar}",
     "WFRP4eEndeavours.Link.Ritual": "Realizar ritual.",
-    "WFRP4eEndeavours.Link.Mapmaking": "Creaci\u00F3n de mapas.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kkZVd242H3PYmgiq]{Creaci\u00F3n de mapas}",
-    "WFRP4eEndeavours.Link.Trade": "Comercio oportuno.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
-    "WFRP4eEndeavours.Link.Ship": "Mantenimiento del barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.RAhGd9iU42ugyzTB]{Mantenimiento del barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.6PIkSbxFLwCM9tkA]{Mantenimiento del barco (Carpintero)}",
-    "WFRP4eEndeavours.Link.Crew": "Entrenar tripulaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
-    "WFRP4eEndeavours.Link.Deforestation": "Deforestaci\u00F3n.</b></h3><p>Quiz\u00E1s @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.gNUdm6x4ko6L4BJg]{Dobles turnos} y/o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Z3IVWcZ3BesTlXWV]{Liderar le\u00F1adores}",
+    "WFRP4eEndeavours.Link.Mapmaking": "Creaci\u00F3n de mapas.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Creaci\u00F3n de mapas}",
+    "WFRP4eEndeavours.Link.Trade": "Comercio oportuno.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
+    "WFRP4eEndeavours.Link.Ship": "Mantenimiento del barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Mantenimiento del barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6PIkSbxFLwCM9tkA]{Mantenimiento del barco (Carpintero)}",
+    "WFRP4eEndeavours.Link.Crew": "Entrenar tripulaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
+    "WFRP4eEndeavours.Link.Deforestation": "Deforestaci\u00F3n.</b></h3><p>Quiz\u00E1s @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.gNUdm6x4ko6L4BJg]{Dobles turnos} y/o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Z3IVWcZ3BesTlXWV]{Liderar le\u00F1adores}",
     "WFRP4eEndeavours.Link.Ancients": "Sintonizar con los Antiguos.",
     "WFRP4eEndeavours.Link.Boatbuilding": "Construcci\u00F3n de barcos.",
     "WFRP4eEndeavours.Link.Construction": "Construcci\u00F3n.",
@@ -143,19 +143,19 @@
     "WFRP4eEndeavours.Link.Border": "Patrullar la frontera.",
     "WFRP4eEndeavours.Link.Rationing": "Racionar.",
     "WFRP4eEndeavours.Link.Expedition": "Patrocinar una expedici\u00F3n.",
-    "WFRP4eEndeavours.Link.Shelter": "Encontrar refugio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.bIXQJZBEaL5iziDm]{Encontrar refugio}",
-    "WFRP4eEndeavours.Link.ForageforFood": "Forrajear comida.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.uwUjherl2lz7eQzJ]{Forrajear comida}",
-    "WFRP4eEndeavours.Link.WatchLustria": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.vVyunkd81fwidcia]{Montar guardia}",
+    "WFRP4eEndeavours.Link.Shelter": "Encontrar refugio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.bIXQJZBEaL5iziDm]{Encontrar refugio}",
+    "WFRP4eEndeavours.Link.ForageforFood": "Forrajear comida.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.uwUjherl2lz7eQzJ]{Forrajear comida}",
+    "WFRP4eEndeavours.Link.WatchLustria": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vVyunkd81fwidcia]{Montar guardia}",
     "WFRP4eEndeavours.Link.MapLustria": "Trazar la ruta.",
     "WFRP4eEndeavours.Link.PracticeLustria": "Practicar una habilidad.",
-    "WFRP4eEndeavours.Link.CampLustria": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.yIa61a3wdrpyYJVg]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.8m5LbpBAEO6PFrzD]{Acampar (Sanar)}",
-    "WFRP4eEndeavours.Link.Boat": "Reparar un barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.kgbyWNs5nzPmSKZn]{Reparar un barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.1vLRKb4gC2CgWxaO]{Reparar un barco (Carpintero)}",
+    "WFRP4eEndeavours.Link.CampLustria": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yIa61a3wdrpyYJVg]{Acampar (Descansar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8m5LbpBAEO6PFrzD]{Acampar (Sanar)}",
+    "WFRP4eEndeavours.Link.Boat": "Reparar un barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kgbyWNs5nzPmSKZn]{Reparar un barco (Constructor de barcos)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1vLRKb4gC2CgWxaO]{Reparar un barco (Carpintero)}",
     "WFRP4eEndeavours.Link.Skaven": "Estudio en skaven.",
     "WFRP4eEndeavours.Link.Best": "S\u00F3lo lo mejor.",
-    "WFRP4eEndeavours.Link.Hypotesis": "La hip\u00F3tesis nula.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.HrkhcT4xbydE8X8c]{Resistir Nulidad}",
+    "WFRP4eEndeavours.Link.Hypotesis": "La hip\u00F3tesis nula.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HrkhcT4xbydE8X8c]{Resistir Nulidad}",
     "WFRP4eEndeavours.Link.Hedge": "Escuala de adivinaci\u00F3n.",
-    "WFRP4eEndeavours.Link.Visionaries": "Ning\u00FAn uso para los visionarios.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.VrMf6VMV5pBSMsil]{Fomentar la discordia con Rosendorn (Cotilleo)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.Q3jQInFQLCR4XSl0]{Fomentar la discordia con Rosendorn (Carisma)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.ZYiQGec6Gi6K85lz]{La profec\u00EDa de Rosendorn}",
-    "WFRP4eEndeavours.Link.Witness": "Atestigua.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.9bLQ0KZgRwX0uZfN]{Atestigua (Sigmar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.wBGNR575OgLiOKad]{Atestigua (Teolog\u00EDa)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4eendeavoursitems.dJZMhU1DKTmdvy8S]{Atestigua (Inteligencia)}",
+    "WFRP4eEndeavours.Link.Visionaries": "Ning\u00FAn uso para los visionarios.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.VrMf6VMV5pBSMsil]{Fomentar la discordia con Rosendorn (Cotilleo)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Q3jQInFQLCR4XSl0]{Fomentar la discordia con Rosendorn (Carisma)} y @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{La profec\u00EDa de Rosendorn}",
+    "WFRP4eEndeavours.Link.Witness": "Atestigua.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9bLQ0KZgRwX0uZfN]{Atestigua (Sigmar)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.wBGNR575OgLiOKad]{Atestigua (Teolog\u00EDa)} o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Atestigua (Inteligencia)}",
 
     "WFRP4eEndeavours.Title.Animal": " - Adiestrar animal",
     "WFRP4eEndeavours.Title.Expert": " - Encontar un experto",
